<resources>
    <string name="app_name">TestePI</string>
    <string name="profile_name">Alexandre Rodrigues</string>
    <string name="btn_buscar">Botão de pesquisa</string>
    <string name="profile_image">Foto de perfil</string>
    <string name="postar">Postar</string>
    <string name="btn_postarIMG">Botão de adicionar imagem</string>
    <string name="image_send">Foto escolhida</string>
    <string name="lbl_legenda">Digite um texto</string>
    <string name="textTema">Tema</string>
    <string name="search">Search</string>
    <string name="config">Configuração</string>
    <string name="foto">postagemFoto</string>
    <string name="btnvoltar">btnVoltar</string>
    <string name="DataPost">Postado em:</string>


<!-- Start Fragment -->
    <string name="start_action_bar_title">Home</string>
    <string name="btnPostagem">Botão postagem</string>

<!-- Profile Fragment -->
    <string name="profile_action_bar_title">Postagem</string>
    <string name="linkImg">Insira o link da sua imagem.</string>


</resources>